calculo de distancias

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><img src="/img/foto6.jpg" alt=""></li>
         </ul>
     </div>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="/js/scipt.js"></script>
 </body>
 
 </html>
