--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     </ul>
     <div class="wrapper">
         <ul class="slide">
-            <li><img src="/img/foto1.jpg" alt=""></li>
-            <li><img src="/img/foto2.jpg" alt=""></li>
-            <li><img src="/img/foto3.jpg" alt=""></li>
-            <li><img src="/img/foto4.jpg" alt=""></li>
-            <li><img src="/img/foto5.jpg" alt=""></li>
-            <li><img src="/img/foto6.jpg" alt=""></li>
+            <li><img src="img/foto1.jpg" alt=""></li>
+            <li><img src="img/foto2.jpg" alt=""></li>
+            <li><img src="img/foto3.jpg" alt=""></li>
+            <li><img src="img/foto4.jpg" alt=""></li>
+            <li><img src="img/foto5.jpg" alt=""></li>
+            <li><img src="img/foto6.jpg" alt=""></li>
         </ul>
     </div>
     <div class="arrow-nav">
