--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class="prev"></button>
         <button class="next"></button>
     </div>
-    <script type="module" src="/js/scipt.js"></script>
+    <script type="module" src="js/scipt.js"></script>
 </body>
 
 </html>
