ajustes de css e adicionado play e pause para o slide passar sozinho

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
     <div class="arrow-nav">
         <button class="prev"></button>
+        <button class="playPause" id="play"></button>
         <button class="next"></button>
     </div>
     <script type="module" src="js/scipt.js"></script>
